src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F504_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatExtraNamedArguments:
      - baz
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 32
  fix:
    content: "{'bar': 1, }"
    location:
      row: 8
      column: 12
    end_location:
      row: 8
      column: 32
  parent: ~

