src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F505_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatMissingArgument:
      - bar
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 14
  fix: ~
  parent: ~

