src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F507_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatPositionalCountMismatch:
      - 2
      - 1
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 14
  fix: ~
  parent: ~
- kind:
    PercentFormatPositionalCountMismatch:
      - 2
      - 3
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 19
  fix: ~
  parent: ~

