src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F508_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatStarRequiresSequence: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 27
  fix: ~
  parent: ~

