src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F509_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatUnsupportedFormatCharacter: j
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 11
  fix: ~
  parent: ~

