src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F522_F522.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    StringDotFormatExtraNamedArguments:
      - bar
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 21
  fix:
    content: "\"{}\".format(1, )"
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 21
  parent: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - spam
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 34
  fix:
    content: "\"{bar}{}\".format(1, bar=2, )"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 34
  parent: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - eggs
      - ham
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 51
  fix:
    content: "\"{bar:{spam}}\".format(bar=2, spam=3, )"
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 51
  parent: ~

