src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F524_F524.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    StringDotFormatMissingArguments:
      - "1"
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 17
  fix: ~
  parent: ~
- kind:
    StringDotFormatMissingArguments:
      - "2"
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 14
  fix: ~
  parent: ~
- kind:
    StringDotFormatMissingArguments:
      - bar
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 16
  fix: ~
  parent: ~
- kind:
    StringDotFormatMissingArguments:
      - bar
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 21
  fix: ~
  parent: ~
- kind:
    StringDotFormatMissingArguments:
      - "0"
      - bar
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix: ~
  parent: ~
- kind:
    StringDotFormatMissingArguments:
      - "0"
      - bar
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 20
  fix: ~
  parent: ~

