src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F525_F525.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    StringDotFormatMixingAutomatic: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 21
  fix: ~
  parent: ~
- kind:
    StringDotFormatMixingAutomatic: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 21
  fix: ~
  parent: ~

